Fri Oct 14 01:05:58 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * CUTS.mwc:

          Moved the CUTS_CUTE and CUTS_CHAOS project to the cosmic
          scope.

Thu Oct 13 22:43:35 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MPC/config/cutslib.mpb:
        * cuts/arch/tcpip/TCPIP_SPEC.h:
        * cuts/arch/tcpip/TCPIP_Servant.h:

          Enabled support for versioned namespaces.

Tue Oct 11 00:58:42 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * CUTS.mwc:

          Added CoSMIC and GAME libraries used in building CUTS to the workspace.

        * install/CUTS_CoSMIC.mwc:

          Refactored the workspace based on what is in CUTS.mwc.

Mon Oct 10 22:11:03 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * CUTS.mwc:
        * MPC/config/requires_runtime.mpb:
        * install/CUTS_CoSMIC.mwc:

          Building the runtime architecture now requires you to
          specify the 'runtime' feature.

Wed Oct  5 17:32:51 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/CHAOS/interpreters/codegen/codegen.mpc:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/CUTS_PICML.mpc:
        * MDE/GME/plugins/cute/CUTE.mpc:
        * MPC/config/cuts_cosmic_utils.mpb:
        * MPC/config/cuts_dsml.mpb:
        * MPC/config/cuts_game_mga.mpb:
        * MPC/config/cuts_game_mga_component.mpb:
        * MPC/config/cuts_gme.mpb:
        * MPC/config/cuts_gme_udm_component.mpb:
        * MPC/config/cuts_picmllib.mpb:
        * MPC/config/picml_udm.mpb:

          Bug fix where workspace generation failed if you did not
          have CoSMIC source code on Windows build machine.

Wed Sep 21 18:54:45 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * CUTS.mwc:

          Fixed error in workspace that was preventing the CodeGenerationKit
          project from building.

        * cuts/utils/unite/setaf/Setaf_Code_Generator.cpp:
