@@ -1,3 +1,15 @@
+Mon Oct 17 08:26:34 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * CUTS.mwc:
+
+          Remove building GAME workspace from the CUTS workspace.
+
+        * cuts/utils/Property_Evaluator_List_Actor.inl:
+        * cuts/utils/Property_Evaluator_List_Actor_T.cpp:
+
+          Fixed compile error where append () was not defined in the
+          template source file.
+
 Fri Oct 14 01:05:58 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * CUTS.mwc:
